k8s-yamls-master/k8s-yamls-master/live/lab/minio/minio.yaml
# # Generated with
# helm template --namespace itsystems-lab --set rootUser='Sheiqu&eag7zohf9ohz3,rootPassword=ka0Xe9she&aGee5eba(k' --name-template=test minio/minio --set ingress.enabled=true --set consoleIngress.enabled=true > git/k8s/k8s-yamls/live/lab/minio/minio.yaml
# Modified replicas to 4
# Modified storage to 20Gi
# Modified storageClassName: itsystems-dev
# Added service.alpha.kubernetes.io/tolerate-unready-endpoints: "true" annotation to headless service
# Modified ingresses appropriately
# Commented user job
# Updated image to RELEASE.2022-06-03T01-40-53Z
---
# Source: minio/templates/console-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: test-minio-console
  namespace: "itsystems-lab"
  labels:
    app: minio
    chart: minio-4.0.2
    release: test
    heritage: Helm
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 9001
      protocol: TCP
      targetPort: 9001
  selector:
    app: minio
    release: test
---
# Source: minio/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: test-minio
  namespace: "itsystems-lab"
  labels:
    app: minio
    chart: minio-4.0.2
    release: test
    heritage: Helm
    monitoring: "true"
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 9000
      protocol: TCP
      targetPort: 9000
  selector:
    app: minio
    release: test
---
# Source: minio/templates/statefulset.yaml
apiVersion: v1
kind: Service
metadata:
  name: test-minio-svc
  namespace: "itsystems-lab"
  labels:
    app: minio
    chart: minio-4.0.2
    release: "test"
    heritage: "Helm"
  annotations:
    service.alpha.kubernetes.io/tolerate-unready-endpoints: "true"
spec:
  publishNotReadyAddresses: true
  clusterIP: None
  ports:
    - name: http
      port: 9000
      protocol: TCP
  selector:
    app: minio
    release: test
---
# Source: minio/templates/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: test-minio
  namespace: "itsystems-lab"
  labels:
    app: minio
    chart: minio-4.0.2
    release: test
    heritage: Helm
spec:
  updateStrategy:
    # type: OnDelete
    type: RollingUpdate
  podManagementPolicy: "Parallel"
  serviceName: test-minio-svc
  replicas: 4
  selector:
    matchLabels:
      app: minio
      release: test
  template:
    metadata:
      name: test-minio
      labels:
        app: minio
        release: test
      annotations:
        checksum/secrets: 686243008f1d10ef2c04a7321b76706d96f61aa5ba3a2b2489152f86625e0c03
        checksum/config: 6cbba9cb0f2fcb464c9d0fcb3dc0c010b0208777f4e3c5cea85d9710ff160f08
    spec:
      securityContext:
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000

      serviceAccountName: minio-sa
      containers:
        - name: minio
          image: quay.io/minio/minio:RELEASE.2022-06-03T01-40-53Z
          # image: quay.io/minio/minio:RELEASE.2022-05-26T05-48-41Z
          # image: quay.io/minio/minio:RELEASE.2022-05-08T23-50-31Z
          imagePullPolicy: IfNotPresent

          command: [ "/bin/sh",
            "-ce",
            "/usr/bin/docker-entrypoint.sh minio server  http://test-minio-{0...3}.test-minio-svc.itsystems-lab.svc.cluster.local/export -S /etc/minio/certs/ --address :9000 --console-address :9001" ]
          volumeMounts:
            - name: export
              mountPath: /export            
          ports:
            - name: http
              containerPort: 9000
            - name: http-console
              containerPort: 9001
          resources:
            requests:
              cpu: 100m
              memory: 700Mi
            limits:
              cpu: 2000m
              memory: 2000Mi
      volumes:
        - name: minio-user
          secret:
            secretName: test-minio
  volumeClaimTemplates:
    - metadata:
        name: export
      spec:
        storageClassName: itsystems-dev
        accessModes: [ "ReadWriteOnce" ]
        resources:
          requests:
            storage: 100Gi
---
# Source: minio/templates/console-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: test-minio-console
  namespace: "itsystems-lab"
  annotations:
    kubernetes.io/ingress.class: nginx
    # nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: 1000m
    nginx.ingress.kubernetes.io/client-body-buffer-size: 10m
    # nginx.ingress.kubernetes.io/secure-backends: "true"
    # nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    # nginx.ingress.kubernetes.io/whitelist-source-range: 0.0.0.0/0
  labels:
    app: minio
    chart: minio-4.0.2
    release: test
    heritage: Helm
spec:
  rules:
    - host: "s3-console-lab.medimpact.com"
      http:
        paths:
          - path: /
            backend:
              serviceName: test-minio-console
              servicePort: 9001
---
# Source: minio/templates/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: test-minio
  namespace: "itsystems-lab"
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    # nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: 1000m
    nginx.ingress.kubernetes.io/client-body-buffer-size: 10m
    # nginx.ingress.kubernetes.io/secure-backends: "true"
    # nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    # nginx.ingress.kubernetes.io/whitelist-source-range: 0.0.0.0/0
  labels:
    app: minio
    chart: minio-4.0.2
    release: test
    heritage: Helm
spec:
  rules:
    - host: "s3-lab.medimpact.com"
      http:
        paths:
          - path: /
            backend:
              serviceName: test-minio
              servicePort: 9000
# ---
# # Source: minio/templates/post-install-create-user-job.yaml
# apiVersion: batch/v1
# kind: Job
# metadata:
  # name: test-minio-make-user-job
  # namespace: "itsystems-lab"
  # labels:
    # app: minio-make-user-job
    # chart: minio-4.0.2
    # release: test
    # heritage: Helm
  # annotations:
    # "helm.sh/hook": post-install,post-upgrade
    # "helm.sh/hook-delete-policy": hook-succeeded,before-hook-creation
# spec:
  # template:
    # metadata:
      # labels:
        # app: minio-job
        # release: test
    # spec:
      # restartPolicy: OnFailure      
      # volumes:
        # - name: minio-configuration
          # projected:
            # sources:
            # - configMap:
                # name: test-minio
            # - secret:
                # name: test-minio
      # containers:
      # - name: minio-mc
        # image: "quay.io/minio/mc:RELEASE.2022-06-03T01-40-53Z"
        # imagePullPolicy: IfNotPresent
        # command: ["/bin/sh", "/config/add-user"]
        # env:
          # - name: MINIO_ENDPOINT
            # value: test-minio
          # - name: MINIO_PORT
            # value: "9000"
        # volumeMounts:
          # - name: minio-configuration
            # mountPath: /config
        # resources:
          # requests:
            # memory: 128Mi
